first iteration updates from sfmu tutorial

--- a/Workshops/240904_eBEAM_HyperSpy-LumiSpy-eXspy.ipynb
+++ b/Workshops/240904_eBEAM_HyperSpy-LumiSpy-eXspy.ipynb
@@ -66,25 +66,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**LumiSpy** and **eXSpy** provide dedicated signal classes.\n",
+    "\n",
+    "We can check the **available signal types**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs.print_known_signal_types()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loading files\n",
     "\n",
     "For saving analyses, HyperSpy has its own hdf5-based data format `.hspy`.\n",
     "\n",
-    "HyperSpy supports a wide range of microscopy (and spectroscopy) related **data file types**:\n",
+    "**RosettaSciIO** provides support for a wide range of microscopy (and spectroscopy) related **data file types**!\n",
     "\n",
-    "- Gatan `.dm3/.dm4`\n",
-    "- Attolight `.sur` (For the moment does not parse `original_metadata` to `metadata`)\n",
-    "- Delmic `.hdf5` (Still needs a parsing script at the moment that you can obtain from Delmic, will be contributed to RosettaSciIO)\n",
-    "- Hamamatsu streak camera images in `.tif` format (Reading the itex `.img` format will be available in RosettaSciIO)\n",
-    "- ...\n",
-    "\n",
-    "Further spectroscopy-related formats are available through **RosettaSciIO**:\n",
-    "\n",
-    "- Horiba JobinYvon XML `.xml`\n",
-    "- TriVista XML `.tvf`\n",
-    "- Renishaw wire format `.wdf`\n",
-    "\n",
-    "We will load three files that we will use during the demo. A preprocessed dataset saved in the `hspy` format and two maps in the `dm4` format:\n",
+    "We will load three files that we will use during the demo. A preprocessed dataset saved in the `hspy` format and two maps in the `dm4` (Gatan) format:\n",
     "\n",
     "*We assume the file location as in the demo repository, if you downloaded the notebook and the data files individually, you might need to adapt the path.*\n",
     "\n",
@@ -231,7 +237,7 @@
    "source": [
     "## Plot / Explore\n",
     "\n",
-    "We can easily plot and explore the hyperspectral data:\n",
+    "We can easily plot and explore the hyperspectral data (drag the marker in the *navigation* window to change the displayed spectrum):\n",
     "\n",
     "*(In the following, we will use the preprocessed dataset `cl1`. The sample contains MethylammoniumLead Bromine (MAPbBr3) perovskite single crystals fabricated by Alice Dearle.)*"
    ]
@@ -405,7 +411,7 @@
    "source": [
     "## Axes types / Convert to energy scale\n",
     "\n",
-    "Required versions: hyperspy>=1.7.0 and lumispy>=0.2.0\n",
+    "*(Required versions: hyperspy>=1.7.0 and lumispy>=0.2.0)*\n",
     "\n",
     "HyperSpy has different types of axes:\n",
     "- The standard `UniformDataAxis` is defined through an `offset` and a `scale` (delta between pixels)\n",
@@ -454,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The axes manager now contains an `energy` axis, which is a non-uniform `DataAxis`:"
+    "The signal axis is now a *non-uniform axis*:"
    ]
   },
   {
@@ -466,6 +472,22 @@
    "outputs": [],
    "source": [
     "cl1_eV.axes_manager"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This axis is defined through an axis vector:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cl1_eV.axes_manager[-1].axis"
    ]
   },
   {
@@ -873,9 +895,10 @@
     "### Remove background (interactive)\n",
     "\n",
     "HyperSpy has an interactive tool for **background removal** that supports various functions, let's start by removing a **simple offset**:\n",
-    "1. Select a region to be used to determine the background: On the signal plot click, drag and release\n",
-    "2. You can still move the region or its boundaries with the mouse and inspect the different spectra using the navigator to make sure the region is right\n",
-    "3. Press `Apply`"
+    "1. Select a region to be used to determine the background (lowest signal intensity): On the signal plot click, drag and release\n",
+    "2. Select the background type *Offset* (can also be set using the argument `background_type=\"Offset\"`)\n",
+    "3. You can still move the region or its boundaries with the mouse and inspect the different spectra using the navigator to make sure the region is right\n",
+    "4. Press `Apply`"
    ]
   },
   {
@@ -896,7 +919,9 @@
    "source": [
     "### Remove last pixels from the spectrum\n",
     "\n",
-    "The signal beyond 800 nm goes to negative values, so lets remove the last three pixels from every spectrum:"
+    "The signal beyond 800 nm goes to negative values, so lets remove the last three pixels from every spectrum (using signal indexation) and replace the original signal.\n",
+    "\n",
+    "*NOTE: Indexation operates on pixel in the signal dimension if the given number is an integer and on the calibrated (wavelength axis) if a float value is used as index.*"
    ]
   },
   {
@@ -907,7 +932,15 @@
    },
    "outputs": [],
    "source": [
-    "cl2 = cl2.isig[:-3]\n",
+    "cl2 = cl2.isig[:-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cl2.plot()"
    ]
   },
@@ -921,11 +954,11 @@
     "\n",
     "In brief:\n",
     "- Inspect the derivative histogram\n",
-    "- Set a sensible threshold to catch the outliers in the histogram\n",
+    "- Set a sensible threshold to catch the outliers in the histogram (8 is a sensible threshold for this dataset)\n",
     "- Iterate through `Find next` / `Remove spike` to continue for wrong identifications / remove identified spikes\n",
     "- `Close` when finished\n",
     "\n",
-    "- *NOTE: The interactive version does not work well with inline plotting (e.g. on binder)*"
+    "*NOTE: The interactive version does not work well with inline plotting. You can also do an automatic best guess spikes removal by passing `interactive=False`.*"
    ]
   },
   {
@@ -974,7 +1007,9 @@
     "- `smooth_savitzky_golay` (Savitzky Golay filter)\n",
     "- `smooth_tv` (total variation data smoothing)\n",
     "\n",
-    "These functions can be run interactively to choose the right parameters, but the parameters can also be passed to the function:"
+    "These functions can be run interactively to choose the right parameters, but the parameters can also be passed to the function. You can play with the parameters and get a live preview, and hit `Apply` when you are happy with the smoothed curve.\n",
+    "\n",
+    "*As we want to use the non-smoothed data later for fitting the data, we first make a copy of the dataset.*"
    ]
   },
   {
@@ -985,7 +1020,7 @@
    },
    "outputs": [],
    "source": [
-    "cl2.plot()\n",
+    "cl2a = cl2.deepcopy()\n",
     "cl2.smooth_lowess(number_of_iterations = 2)"
    ]
   },
@@ -1010,7 +1045,7 @@
     "\n",
     "Peaks can be identified and characterized using the **peak finder** routine `find_peaks1D_ohaver` that is based on the downwards zero crossing of the first derivative.\n",
     "\n",
-    "*As we have some side-peaks, we operate on a subrange of the wavelength axis.*"
+    "*For these routines, it is helpful to operate on the smoothed dataset. As we have some side-peaks, we operate on a subrange of the wavelength axis defined by `isig`.*"
    ]
   },
   {
@@ -1044,29 +1079,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "You can also just determine the **width of a peak** directly from the signal without fitting a model to the data.\n",
-    "\n",
-    "The default is to determine the **FWHM**, i.e. a `factor=0.5`. This value can be set to any other fraction of the peak height."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "width = cl2.isig[600.:].estimate_peak_width(return_interval=True)\n",
-    "width[0].plot(cmap='viridis')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Especially for broad, asymmetric emission bands, the position of the maximum intensity might be of limited value. Therefore, **LumiSpy** provides an additional `centroid` function that determines the **centre of mass** of a peak.\n",
@@ -1084,8 +1096,54 @@
    },
    "outputs": [],
    "source": [
-    "com = cl2.isig[600.:].centroid()\n",
+    "com = cl2.isig[600.:].centroid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result is a new `signal` that we can plot as a colormap using the HyperSpy functionality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "com.plot(cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "You can also determine the **width of a peak** directly from the signal without fitting a model to the data. Again useful for asymmetric peaks. To plot the FWHM interval, we set `return_interval=True` (the returned list then contains three arrays: *width*, as well as *left position* and *right position* of the interval). \n",
+    "\n",
+    "The default is to determine the **FWHM**, i.e. a `factor=0.5`. This value can be set to any other fraction of the peak height."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "width = cl2.isig[600.:].estimate_peak_width(return_interval=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width[0].plot(cmap='viridis')"
    ]
   },
   {
@@ -1107,7 +1165,7 @@
     "mrkl = hs.plot.markers.VerticalLines.from_signal(width[1], color='grey', signal_axes=None)\n",
     "mrkr = hs.plot.markers.VerticalLines.from_signal(width[2], color='grey', signal_axes=None)\n",
     "cl2.add_marker([mrk,mrkl,mrkr], permanent=True)\n",
-    "cltmp.plot()"
+    "cl2.plot()"
    ]
   },
   {
