Apply suggestions from code review

--- a/Workshops/250410_CLEBIC_HyperSpy-LumiSpy.ipynb
+++ b/Workshops/250410_CLEBIC_HyperSpy-LumiSpy.ipynb
@@ -48,6 +48,7 @@
     "\n",
     "# Some environments (like the linked Binder) cannot support the Qt interface, so it may not work properly in those cases.\n",
     "# Consider using alternative backends like %matplotlib inline or %matplotlib notebook for compatibility in such environments.\n",
+    "# However, note that some of the presented interactive functionalities will not work with `inline` plotting.\n",
     "%matplotlib qt5"
    ]
   },
@@ -159,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_map.original_metadata"
+    "spectra_map.metadata"
    ]
   },
   {
@@ -232,7 +233,7 @@
    "id": "3bf2c4b3-5b93-4431-985e-6e17c86dc4ae",
    "metadata": {},
    "source": [
-    "*(In the following, we will use the preprocessed dataset `transient_map` saved in the HyperSpy format. The sample contains (In,Ga)N measured by time-correlated single photon counting by Aidan Campbell at the Paul Drude Institute, Berlin.)*"
+    "*(In the following, we will use the preprocessed dataset `transient_map` saved in the HyperSpy format. The sample contains an (In,Ga)N layer measured by time-correlated single photon counting by Aidan Campbell at the Paul Drude Institute, Berlin.)*"
    ]
   },
   {
@@ -251,7 +252,7 @@
    "id": "129fa83d-9d12-434b-b8ad-26915f4de83f",
    "metadata": {},
    "source": [
-    "For this dataset we'll obtain the effective lifetimes from our transients.\n",
+    "For this dataset, we'll obtain the effective lifetimes from our transients.\n",
     "\n",
     "HyperSpy has a range of general models for data fitting."
    ]
@@ -271,9 +272,7 @@
    "id": "1016cf8c-8bd0-4621-a171-a99a03f086d7",
    "metadata": {},
    "source": [
-    "Models can also be created easily from custom expressions.\n",
-    "\n",
-    "New models can also be defined from custom expressions, we define one for our data as the convolution of a single exponential with a Gaussian - for the instrument response and signal decay, respectively. *Such a component will in the future be directly available in LumiSpy.*"
+    "New components can also be defined from custom expressions, we define one for our data as the convolution of a single exponential with a Gaussian - for the instrument response and signal decay, respectively. *Such a component will in the future be directly available in LumiSpy.*"
    ]
   },
   {
@@ -329,7 +328,7 @@
    "id": "bacb1133-8472-4cdc-b9ce-4fba588e07d6",
    "metadata": {},
    "source": [
-    "Inspect fitting of model:"
+    "To inspect the fit, we can plot our model:"
    ]
   },
   {
@@ -347,7 +346,7 @@
    "id": "e7d6c034-36d5-4d84-9916-be5914b16af0",
    "metadata": {},
    "source": [
-    "We now have a fit for all model variables for a transient at every position. We assign the values obtained for `tau` to a new signal object:"
+    "We now have a fit for all model variables for a transient at every position. We assign the values obtained for the lifetime `tau` to a new signal object:"
    ]
   },
   {
@@ -426,7 +425,7 @@
    "id": "1aed43ab-c82f-469d-9766-90c9dfeca57e",
    "metadata": {},
    "source": [
-    "The streak images are of the `LumiTransientSpectrum` signaxl class:"
+    "The streak images are of the `LumiTransientSpectrum` signal class:"
    ]
   },
   {
@@ -613,13 +612,12 @@
    },
    "outputs": [],
    "source": [
-    "# We convert our time axis to be a navigational one, \n",
-    "# therefore our signal becomes a list of spectra \n",
-    "# signals instead of on a image\n",
-    "spectral_fit = streak02.transpose(signal_axes=(0,), \n",
-    "                                  navigation_axes=(1,)).create_model()\n",
+    "# We convert our time axis to a navigation axis, \n",
+    "# thus our signal becomes a series of spectra \n",
+    "# (1D signal) instead of an image (2D Signa):)\n",
+    spectral_fit = streak02.time2nav().create_model()
     "\n",
-    "g1, g2 = hs.model.components1D.Gaussian(),hs.model.components1D.Gaussian()\n",
+    "g1, g2 = hs.model.components1D.Gaussian(), hs.model.components1D.Gaussian()\n",
     "\n",
     "spectral_fit.extend((g1,g2))\n",
     "\n",
