--- a/Workshops/250410_CLEBIC_HyperSpy-LumiSpy.ipynb
+++ b/Workshops/250410_CLEBIC_HyperSpy-LumiSpy.ipynb
@@ -614,8 +614,8 @@
    "source": [
     "# We convert our time axis to a navigation axis, \n",
     "# thus our signal becomes a series of spectra \n",
-    "# (1D signal) instead of an image (2D Signa):)\n",
-    spectral_fit = streak02.time2nav().create_model()
+    "# (1D signal) instead of an image (2D Signal):\n",
+    "spectral_fit = streak02.time2nav().create_model()\n",
     "\n",
     "g1, g2 = hs.model.components1D.Gaussian(), hs.model.components1D.Gaussian()\n",
     "\n",
